--- a/index.html
+++ b/index.html
@@ -8,24 +8,43 @@
 </head>
 <body>
     <div id="main">
+
+
         <div class="content-container">
+            
+
+            <!-- Upper section -->
+
             <div id="part1">
                 <h1 style="font-weight: 200;">Lorem Ipsum is simply the dummy text of the printing and typesetting industry.</h1>
                 <p>Lorem Ipsum is simply the dummy text of the printing and typesetting industry.</p>
             </div>
+
+
+            <!-- Lower section -->
+
             <div id="part2">
-                <div id="part2-section1">
+                <div id="part2-section1">                   <!-- Lower left section starts -->
                     <div id="image-container">
                         <img src="./pattern.PNG"/>
                     </div>
-                </div>
-                <div id="part2-section2">
+                </div>                                      <!-- Lower left section ends -->
+
+
+
+                <div id="part2-section2">                   <!-- Lower right section starts -->
                         <img src="./avatar.PNG"/>
                         <h2>About me</h2>
-                        <p style="text-align: center;">Lorem Ipsum is simply the dummy text of the printing and typesetting industry.</p>
-                </div>
+                        <p style="text-align: center;">Lorem Ipsum is 
+                            simply the dummy text of the printing and 
+                            typesetting industry.
+                        </p>
+                </div>                                      <!-- Lower right section ends -->
             </div>
+
         </div>
+
+
     </div>
 </body>
 </html>
